SEO: added support for <link hreflang="..." ... /> in multi-language stores. The tags are automatically rendered along with the language switcher.

--- a/src/Presentation/SmartStore.Web/Views/Common/LanguageSelector.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/LanguageSelector.Mobile.cshtml
@@ -15,8 +15,11 @@
         <ul data-role="listview" data-inset="true" data-filter="false">
             @foreach (var lang in Model.AvailableLanguages)
             {
-                <li @(lang.Id == Model.CurrentLanguageId ? " data-icon=false" : null)><a href="@webHelper.ModifyQueryString(Url.RouteUrl("ChangeLanguage", new { langid = lang.Id }), "returnurl=" + HttpUtility.UrlEncode(HttpContext.Current.Request.RawUrl), null)" data-ajax="false">
-                    @lang.Name</a></li>
+                <li @(lang.Id == Model.CurrentLanguageId ? " data-icon=false" : null)>
+					<a href="@webHelper.ModifyQueryString(Url.RouteUrl("ChangeLanguage", new { langid = lang.Id }), "returnurl=" + Url.Encode(Model.ReturnUrls[lang.SeoCode]), null)" data-ajax="false">
+						@lang.Name
+					</a>
+				</li>
             }
         </ul>
     </div>
