--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
@@ -104,6 +104,7 @@
     @Html.Widget("head_html_tag")
 
     @Html.CanonicalUrls()
+	@Html.LinkRels()
     @Html.Action("RssHeaderLink", "News", new { area = "" })
     @Html.Action("RssHeaderLink", "Blog", new { area = "" })
     @*Favicon - upload favicon.ico or favicon-[StoreId].ico file either to the root web or your theme directory*@
