Minor resource fix

--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderTotals.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderTotals.cshtml
@@ -8,7 +8,7 @@
 		    {
             <tr class="lined">
                 <td class="cart-total-left">
-                    <span class="nobr">@T("ShoppingCart.Totals.Weight"):</span>
+                    <span class="nobr">@T("ShoppingCart.Weight"):</span>
                 </td>
                 <td class="cart-total-right">
                     <span class="product-weight">@(Model.Weight.ToString("N2")) kg</span>
