--- a/src/Presentation/SmartStore.Web/Administration/Views/Theme/PreviewTool.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Theme/PreviewTool.cshtml
@@ -26,6 +26,7 @@
 		width: 250px;
 		transition: left 0.25s ease-out;
 		transition-delay: 0.12s;
+		z-index: 1000;
 	}
 	.previewmode-wrapper.open {
 		left: 0;
