Added new settings 'Canonical host name rule'. Enforces permanent redirection to a single domain name for a better page rank (e.g. myshop.com > www.myshop.com or vice versa)

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/GeneralCommon.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/GeneralCommon.cshtml
@@ -197,6 +197,16 @@
                 @Html.ValidationMessageFor(model => model.SeoSettings.CanonicalUrlsEnabled)
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SeoSettings.CanonicalHostNameRule)
+			</td>
+			<td class="adminData">
+				@Html.SettingOverrideCheckbox(model => model.SeoSettings.CanonicalHostNameRule)
+				@Html.DropDownListForEnum(model => model.SeoSettings.CanonicalHostNameRule)
+				@Html.ValidationMessageFor(model => model.SeoSettings.CanonicalHostNameRule)
+			</td>
+		</tr>
     </table>
 }
 @helper TabSecuritySettings()
