Implemented new HtmlHelper extension 'AddCustomHeadParts()': registers whatever head (meta) tag you wish

--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
@@ -109,6 +109,7 @@
     @Html.Action("RssHeaderLink", "Blog", new { area = "" })
     @*Favicon - upload favicon.ico or favicon-[StoreId].ico file either to the root web or your theme directory*@
     @Html.Action("Favicon", "Common", new { area = "" })
+	@Html.CustomHead()
     <!--Powered by SmartStore.net - http://www.smartstore.com-->
 </head>
 <body class="@Html.BodyCssClass()"@(Html.BodyId())>
