--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -801,42 +801,52 @@
             </td>
             <td class="adminData">
                 @Model.PaymentStatus &nbsp;
+				@if (Model.CanMarkOrderAsPaid)
+				{
+					<input type="submit" name="markorderaspaid" value="@T("Admin.Orders.Fields.MarkAsPaid")" id="markorderaspaid" class="btn" 
+						   onclick="return confirm('@T("Admin.Common.AreYouSure")');" title="@T("Admin.Orders.Fields.MarkAsPaid.Hint")" />
+					<text>&nbsp;&nbsp;</text>
+				}
                 @if (Model.CanCapture)
                 {
-                    <input type="submit" name="captureorder" value="@T("Admin.Orders.Fields.Capture")" id="captureorder" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');" /><text>&nbsp;</text>
-                }
-                @if (Model.CanMarkOrderAsPaid)
-                {
-                    <input type="submit" name="markorderaspaid" value="@T("Admin.Orders.Fields.MarkAsPaid")" id="markorderaspaid" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');" /><text>&nbsp;</text>
+                    <input type="submit" name="captureorder" value="@T("Admin.Orders.Fields.Capture")" id="captureorder" class="btn" 
+						   onclick="return confirm('@T("Admin.Common.AreYouSure")');" title="@T("Admin.Orders.Fields.Capture.Hint")" />
                 }
                 @if (Model.CanRefund)
                 {
-                    <input type="submit" name="refundorder" value="@T("Admin.Orders.Fields.Refund")" id="refundorder" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');" /><text>&nbsp;</text>
+                    <input type="submit" name="refundorder" value="@T("Admin.Orders.Fields.Refund")" id="refundorder" class="btn" 
+						   onclick="return confirm('@T("Admin.Common.AreYouSure")');" title="@T("Admin.Orders.Fields.Refund.Hint")" />
                 }
                 @if (Model.CanRefundOffline)
-                {
-                    <input type="submit" name="refundorderoffline" value="@T("Admin.Orders.Fields.RefundOffline")" id="refundorderoffline" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');" /><text>&nbsp;</text>
-                }
+				{
+					<input type="submit" name="refundorderoffline" value="@T("Admin.Orders.Fields.RefundOffline")" id="refundorderoffline" class="btn"
+						   onclick="return confirm('@T("Admin.Common.AreYouSure")');" title="Admin.Orders.Fields.RefundOffline.Hint" />
+				}
                 @if (Model.CanPartiallyRefund)
                 {
-                    <input type="submit" id="partiallyrefundorder" name="partiallyrefundorder" value="@T("Admin.Orders.Fields.PartialRefund")" onclick="javascript:OpenWindow('@(Url.Action("PartiallyRefundOrderPopup", "Order", new { id = Model.Id, online = true, btnId = "btnRefreshPage", formId = "order-form" }))', 960, 320, true); return false;" class="btn" /><text>&nbsp;</text>
+                    <input type="submit" id="partiallyrefundorder" name="partiallyrefundorder" value="@T("Admin.Orders.Fields.PartialRefund")" class="btn" 
+						   onclick="javascript:OpenWindow('@(Url.Action("PartiallyRefundOrderPopup", "Order", new { id = Model.Id, online = true, btnId = "btnRefreshPage", formId = "order-form" }))', 960, 320, true); return false;"
+						   title="@T("Admin.Orders.Fields.PartialRefund.Hint")" />
                 }
                 @if (Model.CanPartiallyRefundOffline)
-                {
-                    <input type="submit" id="partiallyrefundorderoffline" name="partiallyrefundorderoffline" value="@T("Admin.Orders.Fields.PartialRefundOffline")" onclick="javascript:OpenWindow('@(Url.Action("PartiallyRefundOrderPopup", "Order", new { id = Model.Id, online = false, btnId = "btnRefreshPage", formId = "order-form" }))', 960, 320, true); return false;" class="btn" /><text>&nbsp;</text>
-                }
+				{
+					<input type="submit" id="partiallyrefundorderoffline" name="partiallyrefundorderoffline" value="@T("Admin.Orders.Fields.PartialRefundOffline")" class="btn"
+						   onclick="javascript:OpenWindow('@(Url.Action("PartiallyRefundOrderPopup", "Order", new { id = Model.Id, online = false, btnId = "btnRefreshPage", formId = "order-form" }))', 960, 320, true); return false;" 
+						   title="@T("Admin.Orders.Fields.PartialRefundOffline.Hint")" />
+				}
                 @if (Model.CanVoid)
-                {
-                    <input type="submit" name="voidorder" value="@T("Admin.Orders.Fields.Void")" id="voidorder" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');" /><text>&nbsp;</text>
-                }
+				{
+					<input type="submit" name="voidorder" value="@T("Admin.Orders.Fields.Void")" id="voidorder" class="btn"
+						   onclick="return confirm('@T("Admin.Common.AreYouSure")');" title="@T("Admin.Orders.Fields.Void.Hint")" />
+				}
                 @if (Model.CanVoidOffline)
-                {
-                    <input type="submit" name="voidorderoffline" value="@T("Admin.Orders.Fields.VoidOffline")" id="voidorderoffline" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');" /><text>&nbsp;</text>
-                }
+				{
+					<input type="submit" name="voidorderoffline" value="@T("Admin.Orders.Fields.VoidOffline")" id="voidorderoffline" class="btn"
+						   onclick="return confirm('@T("Admin.Common.AreYouSure")');" title="@T("Admin.Orders.Fields.VoidOffline.Hint")" />
+				}
                 <script type="text/javascript">
                     $(document).ready(function () {
                         $('#btnRefreshPage').click(function () {
-                            //refresh page
                             location.reload();
                         });
                     });
