--- a/src/Presentation/SmartStore.Web/Views/Order/Details.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.Mobile.cshtml
@@ -512,7 +512,7 @@
                                 }
                             </div>
                             <div>
-                                <a href="@Url.Action("ShipmentDetails", new { shipmentId = item.Id })">@T("Order.Shipments.ViewDetails")</a>
+                                <a href="@Url.Action("ShipmentDetails", new { id = item.Id })">@T("Order.Shipments.ViewDetails")</a>
                             </div>
                         </div>
                     </li>
