--- a/src/Presentation/SmartStore.Web/Views/Shared/NotFound.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/NotFound.Mobile.cshtml
@@ -3,14 +3,14 @@
     Layout = "~/Views/Shared/_Root.cshtml";
 
     //title
-    Html.AddTitleParts(T("PageTitle.PageNotFound").Text);
+	Html.AddTitleParts(T("NotFoundPage.Title").Text);
 }
 
 <div class="page not-found-page">
     <div class="page-title">
-        <h1>@T("PageTitle.PageNotFound")</h1>
+        <h1>@T("NotFoundPage.Title")</h1>
     </div>
     <div class="page-body">
-        @Html.Action("TopicBlock", "Topic", new { systemName = "PageNotFound" })
+        @T("NotFoundPage.Body")
     </div>
 </div>
