--- a/src/Presentation/SmartStore.Web/Views/Shared/NotFound.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/NotFound.cshtml
@@ -4,14 +4,23 @@
     Layout = "~/Views/Shared/_ColumnsOne.cshtml";
 
     //title
-    Html.AddTitleParts(T("PageTitle.PageNotFound").Text);
+	Html.AddTitleParts(T("NotFoundPage.Title").Text);
 }
 
 <div class="page not-found-page">
     <div class="page-title">
-        <h1>@T("PageTitle.PageNotFound")</h1>
+        <h1>@T("NotFoundPage.Title")</h1>
     </div>
-    <div class="page-body">
-        @Html.Action("TopicBlock", "Topic", new { systemName = "PageNotFound", area = "" })
-    </div>
+    <p class="page-body">
+		@T("NotFoundPage.Body")
+    </p>
+
+	<p class="buttons">
+		<a class="btn btn-default btn-large" href="~/">
+			@T("Homepage")
+		</a>
+		<a class="btn btn-warning btn-large" href="@Url.RouteUrl("ContactUs")">
+			@T("ContactUs")
+		</a>
+	</p>
 </div>
