--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminPopupLayout.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminPopupLayout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "_AdminLayout";
+	Layout = "~/Administration/Views/Shared/_AdminLayout.cshtml";
     Html.AddBodyCssClass("popup");
 }
 @section navbar
