--- a/src/Presentation/SmartStore.Web/Views/Shared/Error.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Error.cshtml
@@ -22,6 +22,7 @@
 <html>
 <head>
 	<title>Internal Server Error</title>
+	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<style type="text/css">
         body {
             font-family: Arial, Helvetica, sans-serif;
