--- a/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/Configure.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/Configure.cshtml
@@ -5,21 +5,40 @@
 @model PayPalExpressConfigurationModel
 @using SmartStore.PayPal.Models;
 @using SmartStore.Web.Framework;
+@using SmartStore.Web.Framework.UI;
+
+<table>
+    <tr>
+        <td colspan="2">
+            <a href="https://www.paypal.com/" target="_blank">
+                <img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/images/logo200x53.png")" alt="PayPal" class="logo" />
+            </a>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2">
+            <div class="alert alert-info fade in">
+                <button class="close" data-dismiss="alert">x</button>
+                @Html.Raw(T("Plugins.Payments.PayPalExpress.AdminInstruction"))
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2">
+            @Html.Action("StoreScopeConfiguration", "Setting", new { area = "Admin" })
+        </td>
+    </tr>
+</table>
+
 @using (Html.BeginForm())
 {
     <table class="adminContent configure-paypal-express">
         <tr>
             <td colspan="2">
-                <a href="https://www.paypal.com/" target="_blank">
-                    <img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/images/logo200x53.png")" alt="PayPal" class="logo" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <div class="alert alert-info fade in">
-                    <button class="close" data-dismiss="alert">x</button>
-                    @Html.Raw(T("Plugins.Payments.PayPalExpress.AdminInstruction"))
+                <div class="admin-config-group">
+                    <div class="title">
+                        @Model.ConfigGroups.SafeGet(0)
+                    </div>
                 </div>
             </td>
         </tr>
@@ -28,7 +47,8 @@
                 @Html.SmartLabelFor(model => model.TransactMode)
             </td>
             <td class="adminData">
-                @Html.DropDownList("TransactMode", Model.TransactModeValues)
+                @Html.SettingOverrideCheckbox(model => model.TransactMode)
+                @Html.DropDownListFor(model => model.TransactMode, Model.TransactModeValues)
             </td>
         </tr>
         <tr>
@@ -36,6 +56,7 @@
                 @Html.SmartLabelFor(model => model.UseSandbox)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.UseSandbox)
                 @Html.EditorFor(model => model.UseSandbox)
                 @Html.ValidationMessageFor(model => model.UseSandbox)
             </td>
@@ -45,6 +66,7 @@
                 @Html.SmartLabelFor(model => model.ApiAccountName)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.ApiAccountName)
                 @Html.EditorFor(model => model.ApiAccountName)
                 @Html.ValidationMessageFor(model => model.ApiAccountName)
             </td>
@@ -54,6 +76,7 @@
                 @Html.SmartLabelFor(model => model.ApiAccountPassword)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.ApiAccountPassword)
                 @Html.EditorFor(model => model.ApiAccountPassword)
                 @Html.ValidationMessageFor(model => model.ApiAccountPassword)
             </td>
@@ -63,6 +86,7 @@
                 @Html.SmartLabelFor(model => model.Signature)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.Signature)
                 @Html.EditorFor(model => model.Signature)
                 @Html.ValidationMessageFor(model => model.Signature)
             </td>
@@ -72,6 +96,7 @@
                 @Html.SmartLabelFor(model => model.AdditionalFee)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.AdditionalFee)
                 @Html.EditorFor(model => model.AdditionalFee)
                 @Html.ValidationMessageFor(model => model.AdditionalFee)
             </td>
@@ -81,6 +106,7 @@
                 @Html.SmartLabelFor(model => model.AdditionalFeePercentage)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.AdditionalFeePercentage)
                 @Html.EditorFor(model => model.AdditionalFeePercentage)
                 @Html.ValidationMessageFor(model => model.AdditionalFeePercentage)
             </td>
@@ -91,6 +117,7 @@
                 @Html.SmartLabelFor(model => model.DisplayCheckoutButton)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.DisplayCheckoutButton)
                 @Html.EditorFor(model => model.DisplayCheckoutButton)
                 @Html.ValidationMessageFor(model => model.DisplayCheckoutButton)
             </td>
@@ -100,6 +127,7 @@
                 @Html.SmartLabelFor(model => model.ConfirmedShipment)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.ConfirmedShipment)
                 @Html.EditorFor(model => model.ConfirmedShipment)
                 @Html.ValidationMessageFor(model => model.ConfirmedShipment)
             </td>
@@ -109,6 +137,7 @@
                 @Html.SmartLabelFor(model => model.NoShipmentAddress)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.NoShipmentAddress)
                 @Html.EditorFor(model => model.NoShipmentAddress)
                 @Html.ValidationMessageFor(model => model.NoShipmentAddress)
             </td>
@@ -118,6 +147,7 @@
                 @Html.SmartLabelFor(model => model.CallbackTimeout)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.CallbackTimeout)
                 @Html.EditorFor(model => model.CallbackTimeout)
                 @Html.ValidationMessageFor(model => model.CallbackTimeout)
             </td>
@@ -127,6 +157,7 @@
                 @Html.SmartLabelFor(model => model.DefaultShippingPrice)
             </td>
             <td class="adminData">
+                @Html.SettingOverrideCheckbox(model => model.DefaultShippingPrice)
                 @Html.EditorFor(model => model.DefaultShippingPrice)
                 @Html.ValidationMessageFor(model => model.DefaultShippingPrice)
             </td>
